# euler-ocaml

./: README.md  dune-project  euler.opam
bench/: dune  main.ml  runner.sh
solutions/: dune  import.ml  solution_001.ml  solution_002.ml  solution_003.ml  solution_004.ml  solution_005.ml  solution_006.ml  solution_007.ml  solution_008.ml  solution_009.ml  solution_010.ml  solution_011.ml  solution_012.ml  solution_013.ml  solutions_004.ml
src/: dune  get_data.ml  primes.ml
test/: dune
